# darkforge

./: .editorconfig  .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  bacon.toml  package.json  rust-toolchain.toml
.attribution/licenses/: forged-in-the-dark-license.md  godot-copyright.txt  godot-license.txt
.cargo/: config.toml
.config/: .cspell.json  .rustfmt.toml  tasks.ex.toml  tasks.rs.toml
.github/workflows/: rust-lint.yml
crates/: .gitignore
crates/godot-plugin/: Cargo.toml
crates/godot-plugin/src/: lib.rs  roll.rs
crates/godot-plugin/src/rng/: dice.rs  mod.rs
crates/lib/: .gitignore
crates/lib/core/: .gitignore  Cargo.toml
crates/lib/core/src/: action.rs  descriptor.rs  lib.rs
crates/lib/core/src/character/: actions.rs
crates/lib/data/: .gitignore  Cargo.toml
crates/lib/data/src/: codec.rs  descriptor.rs  lib.rs  uuid.rs
crates/lib/data/src/store/: mod.rs
crates/lib/data/src/store/sql/: mod.rs
crates/lib/data/src/store/sql/sqlite/: migration.rs  mod.rs  pool.rs  store.rs
crates/lib/dfrng/: Cargo.toml
crates/lib/dfrng/src/: dice.rs  lib.rs
crates/lib/dfrng/src/rng/: mod.rs  test.rs
crates/lib/rng/: Cargo.toml
crates/lib/rng/src/: cards.rs  dice.rs  lib.rs
crates/lib/rng/src/rng/: mod.rs  test.rs
data/: .gitignore
data/defaults/: action.jsonc  attribute.jsonc
examples/: .gitattributes  .gitignore
examples/godot_projects/hungry_goblins/game/: project.godot
examples/godot_projects/hungry_goblins/game/assets/tilesets/: floor_tiles.tga.import
examples/godot_projects/hungry_goblins/game/prefabs/: door_double.tscn  door_single_bottom.tscn  door_single_top.tscn
examples/godot_projects/hungry_goblins/gdext/src/: character.rs
examples/godot_projects/hungry_goblins/raw-assets/: kitchen-table.ase
examples/godot_projects/orcnpie/gdext/: Cargo.toml
examples/hungry_goblins/: tasks.toml
examples/hungry_goblins/game/: hungry_goblins.gdextension
examples/hungry_goblins/game/assets/props/: door_a.tres  door_b.tres  doors.tga.import  gnasher.tga  gnasher.tga.import  kitchen-table.tga  kitchen-table.tga.import
examples/hungry_goblins/game/assets/tilesets/: floor_tiles.tga
examples/hungry_goblins/game/scenes/: bakers-cave.tscn
examples/hungry_goblins/gdext/: Cargo.toml
examples/hungry_goblins/gdext/src/: lib.rs
examples/hungry_goblins/raw-assets/: floor_tiles.kra  goblinbase.ase
examples/lib/: .gitignore
examples/lib/actions/: Cargo.toml
examples/lib/actions/src/: lib.rs  main.rs  model.rs  version.rs
examples/lib/actions/tests/: cli.rs
examples/lib/cli/: Cargo.toml
examples/lib/cli/src/: version.rs
examples/orcnpie/game/: .gitignore  orcnpie.gdextension  project.godot
examples/orcnpie/gdext/: Cargo.toml
examples/plugin/: .gitignore
examples/plugin/hungry_goblins/game/assets/props/: doors.tga
examples/plugin/hungry_goblins/gdext/src/: lib.rs
examples/plugin/hungry_goblins/raw-assets/: doors.ase  doors.kra  gnasher.ase
examples/plugin/orcnpie/: tasks.toml
examples/plugin/orcnpie/game/: game.gdextension  icon.svg.import
examples/plugin/orcnpie/game/scenes/: lab_action_roll.tscn
examples/plugin/orcnpie/gdext/src/: lib.rs
examples/plugin/orcnpie/raw-assets/: pie64_32.ase
examples/test-data/: heritage.jsonc
