[package]
name = "blind-smiths-furnace-gdext"
categories.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rand = "0.9.0"
thiserror = "2.0.12"
num-traits = "0.2.19"

[dev-dependencies]
rstest = "0.25.0"
