[package]
name = "darkforge"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
darkforge_rng.workspace = true
rand = "0.9.0"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"

