[package]
name = "darkforge"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
darkforge_rng.workspace = true
limbo = "0.0.19"
rand = "0.9.1"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
rstest = "0.25.0"
tokio = "1.44.2"

