[package]
name = "hungry_goblins"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
darkforge.workspace = true
godot = "0.2.4"
