[package]
name = "example-act"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "example-act"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
serde = "1.0.219"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
rstest = "0.25.0"
