[package]
name = "darkforge-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.37"
serde = "1.0.219"

[lints]
workspace = true
